# tatu

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO  docker-compose.yml
.github/workflows/: publish-docker.yml  publish-tatu-hook.yml
.serena/: project.yml
backend/: Dockerfile.prod  requirements.txt
backend/alembic/: env.py
backend/app/: auth.py  config.py  generate_events.py  main.py  seed.py
backend/tests/: test_auth.py  test_config.py  test_email_service.py  test_health.py  test_models.py  test_models_rule.py  test_models_user.py  test_router_alerts.py  test_router_auth.py  test_router_dashboard.py  test_router_events.py  test_router_overview.py  test_router_rules.py  test_router_users.py  test_rule_loader.py  test_rule_loader_startup.py  test_rule_service.py  test_schemas.py  test_schemas_rule.py  test_schemas_user.py  test_user_service.py  test_websocket_manager.py
docs/: tutorial-rules.md
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  secret.yaml
marketing/: linkedin_en.md  linkedin_pt.md  workshop_en.md  workshop_pt.md
rules/pii/: credit-card.yaml  (+8 more)
tatu-hook/: LICENSE  README.md  RELEASING.md  pyproject.toml
tatu-hook/src/tatu_hook/: cli.py  engine.py  platform.py  protocol.py  reporter.py  sync.py
tatu-hook/tests/: test_cli.py  test_engine.py  test_platform.py  test_protocol.py  test_sync.py
(+109 files in other folders)
